[gd_scene load_steps=4 format=3 uid="uid://ds8le0x3xnjui"]

[ext_resource type="Texture2D" uid="uid://5t3xgnbe0ae" path="res://textures/ink_circle.png" id="1_m31fg"]
[ext_resource type="Script" uid="uid://bc7rfnvy6tcsw" path="res://scripts/candidate.gd" id="2_dastc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_roj77"]
radius = 375.0

[node name="Candidate" type="Sprite2D" groups=["candidate"]]
scale = Vector2(0.13, 0.13)
texture = ExtResource("1_m31fg")
script = ExtResource("2_dastc")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_roj77")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
